Fix feedback card height overflow

--- a/public/css/main.desktop.v3.color6.css
+++ b/public/css/main.desktop.v3.color6.css
@@ -3300,6 +3300,9 @@ span.centred-link:focus {
 .notif.open .footer {
   display: block;
 }
+.component.feedback .player {
+  height: auto !important;
+}
 .component.rc .rc {
   position: relative;
   margin: 20px 10px 20px 30px;
